--- a/gpt_sentiment.ipynb
+++ b/gpt_sentiment.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Liza Polozenko\\OneDrive\\Рабочий стол\\ML\\NLP PROJECT\\sentenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import pipeline\n",
     "from googleapiclient.discovery import build\n",
     "import re\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", message=\"IProgress not found\")"
    ]
   },
   {
