--- a/gemini_analysis.ipynb
+++ b/gemini_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", message=\"IProgress not found\")"
    ]
   },
   {
