--- a/gpt_sentiment.ipynb
+++ b/gpt_sentiment.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"AIzaSyBtYjxUGbEUXvofnmBagokIN0CZ6PNFYPs\"\n",
+    "api_key = \"YOUR API\"\n",
     "youtube = build('youtube', 'v3', developerKey=api_key)\n",
     "video_id = \"FW2XOIxaNqg\"\n",
     "\n",
